app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-site
  namespace: nginx
spec:
  type: ClusterIP
  selector:
    app: nginx-site
  ports:
  - name: http
    port: 80
    targetPort: 8080
